--- a/MovieSeriesAvaiabilityFE/movies-series/src/App.css
+++ b/MovieSeriesAvaiabilityFE/movies-series/src/App.css
@@ -1,19 +1,56 @@
+@import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
+
 .App {
   text-align: center;
 }
-
+h1 {
+	font-family: 'Arima Madurai', cursive;
+	color: black;
+	font-size: 3rem;
+	letter-spacing: -1px;
+	text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+	position: relative;
+	z-index: 3;
+}
+h4{
+  font-family: 'Arima Madurai', cursive;
+  letter-spacing: 1px;
+  color: black;
+	position: relative;
+	z-index: 2;
+}
 .logo{
   position: absolute;
   top: 0;
   left: 0;
-  height: 50px;
-  width: 170px;
+  height: 30px;
+  width: 90px;
   margin: 10px;
 }
+.blur {
+  filter: blur(5px);
+  position: fixed;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+@media (min-width: 600px) {
+ .logo{
+  height: 50px;
+  width: 170px;
+ }
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .logo {
+    animation: App-logo-spin infinite 10s linear;
   }
 }
 
@@ -52,3 +89,4 @@
     transform: rotate(360deg);
   }
 }
+
